--- a/index.html
+++ b/index.html
@@ -380,128 +380,126 @@
     <!-- End create & sell -->
 
     <!-- Top market -->
-    <!-- <section id="top-market-area">
+    <section id="rank-area">
         <div class="container">
             <div class="row">
-                <p class="p-des">NFT Creators</p>
-                <h1 class="h1-heading">Top Creators of the week</h1>
+                <p class="description">NFT Creators</p>
+                <h1 class="heading">Top Creators of the week</h1>
             </div>
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 8.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
+                        <div class="rank-content">
                             <p>Risk Storms</p>
                             <span><i class='bx bx-euro'></i>19,400.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 9.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
-                            <p>Risk Storms</p>
+                        <div class="rank-content">
+                            <p>Sam Son</p>
                             <span><i class='bx bx-euro'></i>19,400.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 10.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
-                            <p>Risk Storms</p>
+                        <div class="rank-content">
+                            <p>Jacke Robert</p>
                             <span><i class='bx bx-euro'></i>8,400.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 11.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
-                            <p>Risk Storms</p>
+                        <div class="rank-content">
+                            <p>Joe Forest</p>
                             <span><i class='bx bx-euro'></i>19,400.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 12.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
-                            <p>Risk Storms</p>
+                        <div class="rank-content">
+                            <p>Reece Jackson</p>
                             <span><i class='bx bx-euro'></i>10,400.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 13.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
-                            <p>Risk Storms</p>
+                        <div class="rank-content">
+                            <p>Scott Moses</p>
                             <span><i class='bx bx-euro'></i>8,700.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 14.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
-                            <p>Risk Storms</p>
+                        <div class="rank-content">
+                            <p>Lara Smith</p>
                             <span><i class='bx bx-euro'></i>19,400.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 15.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
-                            <p>Risk Storms</p>
+                        <div class="rank-content">
+                            <p>Drink Water</p>
                             <span><i class='bx bx-euro'></i>6,400.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="top-market-box">
+                <div class="col-md-4">
+                    <div class="rank-box">
                         <img src="./source/image/image 16.png" alt="" class="img-fluid">
-                        <div class="top-market-content">
-                            <p>Risk Storms</p>
-                            <span><i class='bx bx-euro'></i>7,400.50 ETH</span>
+                        <div class="rank-content">
+                            <p>Rick Hardy</p>
+                            <span><i class='bx bx-euro'></i>7,490.50 ETH</span>
                         </div>
                         <i class='bx bx-dots-horizontal-rounded'></i>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <button class="btn top-market-btn">Watch Video</button>
-            </div>
+            <button class="btn rank-btn text-center">Watch Video</button>
         </div>
-    </section> -->
+    </section>
     <!-- End top market -->
 
     <!-- Contact area -->
-    <!-- <section id="contact-area">
+    <section id="contact-area">
         <div class="container">
             <div class="contact-box text-center">
-                <h1 class="h1">Join Our Comunity</h1>
+                <h1>Join Our Comunity</h1>
                 <p>Meet the Team, artists and collection for problem updates, announcements, and more.</p>
                 <button class="btn">Take Me To Discord</button>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- End contact -->
 
     <!-- Footer -->
-    <!-- <footer id="footer-area">
+    <footer id="footer-area">
         <div class="container">
             <div class="row">
-                <div class="col-lg-5">
+                <div class="col-md-5">
                     <div class="footer-heading">Conal</div>
                     <p class="footer-des">Amazing NFTs marketplace, Authentic and unique digital creation</p>
                     <ul class="social-list">
@@ -510,31 +508,31 @@
                         <li class="social-item"><i class='bx bxl-instagram-alt'></i></li>
                         <li class="social-item"><i class='bx bxl-youtube'></i></li>
                     </ul>
-                    <p class="footer-copy">Coppyright 2022 Conal</p>
+
                 </div>
                 <div class="col-lg-7">
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-6">
                             <h2>Marketplace</h2>
-                            <ul>
+                            <ul class="list-f">
                                 <li>Explore</li>
                                 <li>NFTs</li>
                                 <li>Collectibles</li>
                                 <li>Vitual Reality</li>
                             </ul>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-6">
                             <h2>Resources</h2>
-                            <ul>
+                            <ul class="list-f">
                                 <li>Help center</li>
                                 <li>Partners</li>
                                 <li>Blog</li>
                                 <li>Newsletter</li>
                             </ul>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-6">
                             <h2>Company</h2>
-                            <ul>
+                            <ul class="list-f">
                                 <li>About Us</li>
                                 <li>Careers</li>
                                 <li>Sopport</li>
@@ -544,8 +542,21 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="copy">
+                        <p>Coppyright 2022 Conal</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="rule">
+                        <p>Privacy Policy</p>
+                        <p>Terms & Conditions</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!-- JS file  -->
     <script src="./source/src/app.js"></script>
